<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"
        android:id="@+id/sitem"
        android:visible="true">
        </group>

    <!--Discard code below-->
    <group android:checkableBehavior="single"
        android:id="@+id/mgrp"
        android:visible="false">
        <item
            android:id="@+id/st1"
            android:title="@string/s1"

            />
        <item
            android:id="@+id/st2"
            android:title="@string/s2"

            />
        <item
            android:id="@+id/st3"
            android:title="@string/s3"

            />
        <item
            android:id="@+id/st4"
            android:title="@string/s4"

            />
        <item
            android:id="@+id/st5"
            android:title="@string/s5"

            />
        <item
            android:id="@+id/st6"
            android:title="@string/s6"

            />
        <item
            android:id="@+id/st7"
            android:title="@string/s7"

            />
        <item
            android:id="@+id/st8"
            android:title="@string/s8"

            />
        <item
            android:id="@+id/st9"
            android:title="@string/s9"

            />
        <item
            android:id="@+id/st10"
            android:title="@string/s10"

            />
        <item
            android:id="@+id/st11"
            android:title="@string/s11"

            />
        <item
            android:id="@+id/st12"
            android:title="@string/s12"

            />
        <item
            android:id="@+id/st13"
            android:title="@string/s13"

            />
        <item
            android:id="@+id/st14"
            android:title="@string/s14"

            />
        <item
            android:id="@+id/st15"
            android:title="@string/s15"

            />
        <item
            android:id="@+id/st16"
            android:title="@string/s16"

            />
        <item
            android:id="@+id/st17"
            android:title="@string/s17"

            />
        <item
            android:id="@+id/st18"
            android:title="@string/s18"

            />
        <item
            android:id="@+id/st19"
            android:title="@string/s19"

            />
        <item
            android:id="@+id/st20"
            android:title="@string/s20"

            />
        <item
            android:id="@+id/st21"
            android:title="@string/s21"

            />
        <item
            android:id="@+id/st22"
            android:title="@string/s22"

            />
        <item
            android:id="@+id/st23"
            android:title="@string/s23"
            />
        <item
            android:id="@+id/st24"
            android:title="@string/s24"

            />
        <item
            android:id="@+id/st25"
            android:title="@string/s25"

            />
        <item
            android:id="@+id/st26"
            android:title="@string/s26"

            />
        <item
            android:id="@+id/st27"
            android:title="@string/s27"

            />
        <item
            android:id="@+id/st28"
            android:title="@string/s28"
            />
        <item
            android:id="@+id/st29"
            android:title="@string/s29"
            />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp1"
        android:visible="false">
        <item android:id="@+id/gp1d1" android:title="@string/s1d1"/>
        <item android:id="@+id/gp1d2" android:title="@string/s1d2"/>
        <item android:id="@+id/gp1d3" android:title="@string/s1d3"/>
        <item android:id="@+id/gp1d4" android:title="@string/s1d4"/>
        <item android:id="@+id/gp1d5" android:title="@string/s1d5"/>
        <item android:id="@+id/gp1d6" android:title="@string/s1d6"/>
        <item android:id="@+id/gp1d7" android:title="@string/s1d7"/>
        <item android:id="@+id/gp1d8" android:title="@string/s1d8"/>
        <item android:id="@+id/gp1d9" android:title="@string/s1d9"/>
        <item android:id="@+id/gp1d10" android:title="@string/s1d10"/>
        <item android:id="@+id/gp1d11" android:title="@string/s1d11"/>
        <item android:id="@+id/gp1d12" android:title="@string/s1d12"/>
        <item android:id="@+id/gp1d13" android:title="@string/s1d13"/>

        </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp2"
        android:visible="false">
        <item android:id="@+id/gp2d1" android:title="yo"/>

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp3"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp4"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp5"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp6"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp7"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp8"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp9"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp10"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp11"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp12"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp13"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp14"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp15"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp16"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp17"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp18"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp19"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp20"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp21"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp22"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp23"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp24"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp25"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp26"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp27"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp28"
        android:visible="false">


    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/gp29"
        android:visible="false">


    </group>
</menu>